--- a/metodos-de-treino-baseados-em-arvore.qmd
+++ b/metodos-de-treino-baseados-em-arvore.qmd
@@ -44,7 +44,7 @@ O **índice Gini** da variável é dado pela média do índice Gini para os nós
 
 Gini(variável) = Gini(nó$_1$) $\times$ $P_1$ + Gini(nó$_2$) $\times$ $P_2$
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 base = readRDS("SmallHeart.rds")
 head(base)
 ```
@@ -57,7 +57,7 @@ Nosso objetivo é prever se um indivíduo tem ou não uma doença cardíaca (var
 
 Vamos verificar o quão bem as variáveis isoladamente são capazes de prever se o paciente possui ou não doença cardíaca. Vamos começar pela variável "Sex".
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 summary(base$Sex)
 ```
 
@@ -67,7 +67,7 @@ Note que temos 22 indivíduos do sexo feminino e 50 indivíduos do sexo masculin
 library(dplyr)
 ```
 
-```{r message=FALSE}
+```{r warning=FALSE, message=FALSE}
 # Verificando quantos indivíduos possuem doença cardíaca de acordo com o sexo:
 
 base %>% group_by(Sex, HeartDisease) %>% summarise(N=n())
@@ -95,13 +95,13 @@ Como o índice Gini da variável "Sex = M" ficou mais próximo de 0,5 do que de 
 
 Agora vamos realizar o mesmo processo para a variável "ChestPain", ou seja, vamos verificar o quão bem ela é capaz de prever se o paciente possui doença cardíaca.
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 base %>% group_by(ChestPain) %>% summarise(N=n())
 ```
 
 Note que temos 23 indivíduos que sentem dor no peito tipicamente e 49 indivíduos que não sentem tipicamente. Vamos verificar quantos deles possuem doença cardíaca:
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 base %>% group_by(ChestPain, HeartDisease) %>% summarise(N=n())
 ```
 
@@ -127,13 +127,13 @@ Note que ela obteve um índice Gini um pouco maior do que a variável "Sex = M".
 
 Agora falta apenas obter o índice Gini da variável "Thal". Mas diferentemente das outras 2 ela não possui apenas 2 níveis, e sim 3: "normal", "fixed" e "reversable".
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 base %>% group_by(Thal) %>% summarise(N=n())
 ```
 
 Nesse caso vamos ter que calcular o índice Gini para todas as combinações possíveis: "Thal = normal", "Thal = fixed", "Thal = reversable", "Thal = normal ou fixed", "Thal = normal ou reversable", "Thal = fixed ou reversable". Porém note que o índice Gini da variável "Thal = normal" é equivalente ao da variável "Thal = fixed ou reversable", pois "Thal = normal Sim" é o mesmo que "Thal = fixed ou reversable Não". Da mesma forma isso vale para as variáveis "Thal = fixed" e "Thal = normal ou reversable", e "Thal = reversable" e "Thal = normal ou fixed". Com isso conseguimos economizar algumas contas.
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 base %>% group_by(Thal, HeartDisease) %>% summarise(N=n())
 ```
 
@@ -203,7 +203,7 @@ A variável "Thal = Reversable" é a que possui o menor índice Gini, portanto e
 
 O próximo passo é definir as variáveis que ficarão no nó "Thal = Reversable Sim" e "Thal = Reversable Não". Para isso temos que olhar para a base de dados com os indivíduos do grupo "Thal = Reversable Sim" e "Thal = Reversable Não", respectivamente.
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 # Grupo de indivíduos "Thal = Reversable Sim":
 base1 = base %>% filter(Thal == "reversable")
 head(base1)
@@ -211,7 +211,7 @@ head(base1)
 
 Agora temos que calcular o índice Gini para todas as variáveis referentes a esse grupo. A que for mais pura entrará no nó "Thal = Reversable Sim". Poupando os cálculos, vamos obter que o menor índice Gini é o da variável "ChestPain = Typical".
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 # Grupo de indivíduos "Thal = Reversable Não":
 base2 = base %>% filter(Thal != "reversable")
 head(base2)
@@ -245,7 +245,7 @@ A grande pergunta é qual valor colocar no nó como condição. Para exemplifica
 
 **Ex.:** Vamos carregar o banco de dados "SmallAdvertising". Este banco possui informações sobre as vendas de um produto em 10 mercados diferentes (variável sales), além de orçamentos de publicidade para esse produto em cada um dos mercados para três mídias diferentes: TV, rádio e jornal (variáveis TV, radio e newspaper, respectivamente).
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 vendas = readRDS("SmallAdvertising.rds")
 
 vendas
@@ -253,7 +253,7 @@ vendas
 
 Vamos considerar o caso em que queremos construir uma árvore de regressão para prever as vendas baseados apenas na variável TV.
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 plot(vendas$TV, vendas$sales, pch = 19,
      xlab = "Orçamento de Publicidade do Produto para a TV",
      ylab = "Vendas do Produto",
@@ -262,14 +262,14 @@ plot(vendas$TV, vendas$sales, pch = 19,
 
 Primeiramente é preciso definir qual valor irá entrar como condição no primeiro nó. O algoritmo realiza isso testando todos os possíveis valores de separação para os dados, e pega o que minimiza a soma dos quadrados dos resíduos. Inicialmente, como o primeiro separador, ele considera a média dos 2 menores valores da Publicidade.
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 ordenados = sort(vendas$TV)
 mean(ordenados[1:2])
 ```
 
 Então 44,95 é o primeiro valor a ser testado para a separação dos dados.
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 plot(vendas$TV, vendas$sales, pch = 19,
      xlab = "Orçamento de Publicidade do Produto para a TV",
      ylab = "Vendas do Produto",
@@ -287,13 +287,13 @@ Note que fazendo isso teremos resíduos (diferença do valor original e do valor
 
 Em seguida ele irá para o próximo separador: a média do segundo e do terceiro menores pontos.
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 mean(ordenados[2:3])
 ```
 
 Então 66,95 é o segundo valor a ser testado para a separação dos dados.
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 plot(vendas$TV, vendas$sales, pch = 19,
      xlab = "Orçamento de Publicidade do Produto para a TV",
      ylab = "Vendas do Produto",
@@ -330,14 +330,14 @@ Vamos construir árvores com o comando rpart(). Como argumento da função nós 
 
 Vamos utilizar a base de dados referentes ao primeiro exemplo dado de construção de uma árvore, onde queríamos prever se um indivíduo possui doença cardíaca baseado em características dele.
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 library(rpart)
 heart_arvore = rpart(HeartDisease~., data = base)
 ```
 
 Agora vamos plotar a árvore com o comando rpart.plot().
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 library(rpart.plot)
 rpart.plot(heart_arvore)
 ```
@@ -354,7 +354,7 @@ Observe que a árvore ficou "vazia". O que ela quer dizer com isso é: assuma "N
 
 **Ex. 1:** Vamos ajustar os parâmetros da árvore e construí-la novamente. Vamos determinar que a profundidade da árvore seja 2, que 0 seja o número mínimo de observações em um nó e que ela seja construída mesmo que não haja ganhos em mais divisões.
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 controle = rpart.control(minsplit=0, cp = -1, maxdepth = 2)
 heart_arvore = rpart(HeartDisease~., data = base, control = controle)
 rpart.plot(heart_arvore)
@@ -376,7 +376,7 @@ Cada saída do comando rpart.plot() tem um significado específico:
 
 **Ex. 2:** Vamos agora constuir a árvore mais completa possível, ou seja, uma árvore sobreajustada à amostra, sem restrições em sua profundidade máxima.
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 controle = rpart.control(minsplit=0, cp = -1)
 heart_arvore = rpart(HeartDisease~., data = base, control = controle)
 rpart.plot(heart_arvore)
@@ -390,7 +390,7 @@ Agora podemos levantar a seguinte questão: como avaliar a precisão do modelo c
 
 Podemos utilizar árvores de decisão/regressão como um método de treinamento para os dados através da função train(). Vamos fazer isso utilizando a base de dados College. Este banco possui informações sobre 777 diferentes universidades e faculdades dos EUA. Ela apresenta algumas variáveis como: Apps - número de pedidos recebidos para ingresso, Room.Board - custos de acomodação e alimentação, Books - custos estimados de livros, PhD - quantidade de professores com doutorado, entre outras, e nossa variável de interesse Private, que indica se a universidade é privada ou pública.
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 library(readr)
 library(dplyr)
 college = read_csv("College.csv")
@@ -400,7 +400,7 @@ head(college)
 
 Vamos, primeiramente, separar a amostra em treino e teste.
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 library(caret)
 set.seed(100)
 noTreino = createDataPartition(y = college$Private, p = 0.7, list = F)
@@ -410,7 +410,7 @@ teste = college[-noTreino,]
 
 Vamos treinar o modelo pelo método de árvores de decisão. Fazemos isso através do argumento "method = rpart" da função train().
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 set.seed(100)
 modelo = caret::train(Private~., method = "rpart", data = treino)
 modelo
@@ -418,7 +418,7 @@ modelo
 
 Observe que através do train() são testados alguns valores para o cp (complexity parameter) e é eleito aquele com a maior taxa de acurácia. Nesse caso, o cp utilizado será o de aproximadamente 0,0436. Vamos aplicar o modelo no conjunto teste.
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 predicao = predict(modelo, teste)
 
 # Transformando em fator para depois construirmos a matriz de confusão:
@@ -430,20 +430,20 @@ confusionMatrix(predicao, teste$Private)
 
 Obtivemos uma acurácia de 0,8922, o que é razoável para um modelo que utiliza árvores.
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 # Desenhando a árvore:
 rpart.plot(modelo$finalModel)
 ```
 
 A limitação de utilizar as árvores através do train() é que o único parâmetro da árvore que pode ser alterado é o cp (\*complexity parameter).
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 modelLookup("rpart")
 ```
 
 Para alterarmos o seu valor utilizamos o comando expand.grid().
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 controle = expand.grid(.cp = 0.0001)
 modelo = caret::train(Private~., method = "rpart", data = treino, tuneGrid = controle)
 modelo
@@ -451,7 +451,7 @@ modelo
 
 Note que com esse valor de cp a árvore fica mais profunda, pois estamos diminuindo o mínimo de ganho de ajuste que devemos ter em cada divisão.
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 rpart.plot(modelo$finalModel)
 ```
 
@@ -463,7 +463,7 @@ As **Florestas Aleatórias** (*Random Forest*) se utilizam de várias árvores d
 
 Vamos construir uma floresta aleatória usando a base de dados [balloons]{.red-text}.
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 balloons = readr::read_csv("balloons.csv")
 balloons$inflated = as.factor(balloons$inflated)
 str(balloons)
@@ -473,7 +473,7 @@ Com base na cor do balão, o tamanho dele, se ele é elástico ou não e se quem
 
 A primeira coisa que precisamos fazer é criar uma nova amostra do mesmo tamanho da original utilizando \[bootstrap\].
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 set.seed(33)
 boot1 = caret::createResample(y=balloons$inflated, times=1, list=F)
 NovaAmostra1 = balloons[boot1,]
@@ -482,7 +482,7 @@ Out_of_bag = balloons[-boot1,]
 
 Todas as observações que não forem sorteadas vão entrar no "Out-of-Bag". Temos 4 variáveis fora a de interesse, vamos sortear 2 variáveis para construir o primeiro nó da nossa árvore.
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 set.seed(413)
 sample(1:4, 2)
 ```
@@ -494,16 +494,16 @@ Vamos calcular o índice Gini para essas duas variáveis.
 table(NovaAmostra1$size, NovaAmostra1$inflated)
 ```
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 (gini.size = (1-(7/14)^2-(7/14)^2)*(14/20) + (1-(4/6)^2-(2/6)^2)*(6/20))
 ```
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 #calculando o indice gini para a variável idade
 table(NovaAmostra1$age, NovaAmostra1$inflated)
 ```
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 (gini.age = (1-(5/14)^2-(9/14)^2)*(14/20) + (1-(6/6)^2-(0/6)^2)*(6/20))
 ```
 
@@ -513,28 +513,28 @@ A variável idade tem um grau de impureza menor, então ela será a raiz da árv
 
 Agora das variáveis que ainda não foram usadas, sorteamos mais duas para continuar a árvore.
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 set.seed(443)
 sample(1:3, 2)
 ```
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 library(dplyr)
 NovaAmostra1 = filter(NovaAmostra1, age=="ADULT") 
 #calculando o indice gini para a variável tamanho
 table(NovaAmostra1$size, NovaAmostra1$inflated)
 ```
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 (gini.size = (1-(4/11)^2-(7/11)^2)*(11/14) + (1-(1/3)^2-(2/3)^2)*(3/14))
 ```
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 #calculando o indice gini para a variável act
 table(NovaAmostra1$act, NovaAmostra1$inflated)
 ```
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 (gini.act = (1-(5/5)^2-(0/5)^2)*(5/14) + (1-(0/9)^2-(9/9)^2)*(9/14))
 ```
 
@@ -562,7 +562,7 @@ O método de usar bootstrap para criar novas amostras e votos para a tomada de d
 
 As observações de cada amostra que não entraram na construção de cada árvore estão contidas [Out of Bag]{.red-text}. Essas observações servirão para avaliar nosso preditor.
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 Out_of_bag = balloons[c(2,4,12,13,15,18,20,
                         1,2,3,5,10,
                         2,4,12,13,15,18,20,
@@ -582,7 +582,7 @@ O pacote **randomForest** possui as ferramentas adequadas para a criação de um
 
 É importante observar se as váriaveis categóricas estão na classe de fatores.
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 balloons = readr::read_csv("balloons.csv")
 balloons = na.omit(balloons)
 # tratando todas as variaveis 
@@ -596,7 +596,7 @@ modelo = randomForest(inflated ~ ., data=balloons, ntree=20)
 
 Agora, vamos avaliar a precisão do modelo.
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 # avaliando o modelo
 modelo
 ```
@@ -605,7 +605,7 @@ Note que foram construídas 20 árvores utilizando 2 variáveis a cada vez. Essa
 
 Podemos ver que a precisão do nosso modelo é de 19/20, ou seja, 95%. Qual seria a precisão se fosse feito apenas uma árvore?
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 balloons = readr::read_csv("balloons.csv")
 # tratando todas as variaveis 
 balloons = dplyr::mutate_if(balloons, is.character, as.factor)
@@ -632,7 +632,7 @@ Agora, observe que construimos uma floresta com 20 árvores. O que acontece com 
 
 Vamos avaliar o comportamento do erro conforme acrescentamos mais árvores à floresta. Para isso, utilizaremos a base de dados **spam** para melhor vizualização
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 # chamando a base
 library(kernlab)
 data("spam")
@@ -642,7 +642,7 @@ set.seed(23)
 modelo = randomForest(type ~ ., data=spam, ntree=20)
 ```
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 # observando o comportamento do erro em 20 árvores
 erro_OOB <- data.frame(
   Arvores = rep(1:nrow(modelo$err.rate), times=2),
@@ -656,7 +656,7 @@ ggplot(data=erro_OOB, aes(x=Arvores, y=Erro)) +
                          labels = c("Não Spam", "Spam"))
 ```
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 # construindo floresta com 50 arvores
 set.seed(23)
 modelo = randomForest(type ~ ., data=spam, ntree=50)
@@ -674,7 +674,7 @@ ggplot(data=erro_OOB, aes(x=Arvores, y=Erro)) +
                          labels = c("Não Spam", "Spam"))
 ```
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 # construindo floresta com 100 arvores
 set.seed(23)
 modelo = randomForest(type ~ ., data=spam, ntree=100)
@@ -692,7 +692,7 @@ ggplot(data=erro_OOB, aes(x=Arvores, y=Erro)) +
                          labels = c("Não Spam", "Spam"))
 ```
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 # construindo floresta com 1000 arvores
 set.seed(23)
 modelo = randomForest(type ~ ., data=spam, ntree=1000)
@@ -716,7 +716,7 @@ Repare que após uma certa quantidade de árvores, o erro se estabiliza. Sendo a
 
 Também é possivel fazer florestas aleatórias usando a função [train]{.red-text} do pacote [caret]{.red-text}. Para isso, é necessário alterar o método de reamostragem para *out of bag* e o método para "rf" (*random forest*). Vamos utilizar a base [wine]{.red-text}, construiremos um regressor para predizer a variável [alcohol]{.red-text}.
 
-```{r}
+```{r message=FALSE, warning=FALSE}
 # alterando o metodo de reamostragem
 controle = trainControl(method="oob")
 # chamando a base
@@ -730,7 +730,7 @@ modelo
 
 Note o valor "[mtry]{.red-text}" no modelo. Ele indica a quantidade de váriaveis da base que foram utilizadas para treinar o modelo. Repare que ele calcula a RMSE e $R^2$ para diferentes quantidades de variáveis usadas e utiliza no final a quantidade que possuir menor RMSE, no caso mtry=11. Caso queira fixar o número de variáveis usadas, basta usar o seguinte comando.
 
-```{r}
+```{r warning=FALSE}
 tng = expand.grid(.mtry=7)
 modelo = caret::train(alcohol~., data=wine, method="rf", ntree=50, trControl=controle, tuneGrid=tng)
 modelo
@@ -757,7 +757,7 @@ golf
 
 Primeiramente construímos um toco para cada uma das variáveis e calculamos seus respectivos índices Gini. Vamos começar com a variável Outlook.
 
-```{r}
+```{r message=FALSE, warning=FALSE}
 library(dplyr)
 golf %>% group_by(Outlook, Play) %>% summarise(N=n())
 ```
@@ -778,7 +778,7 @@ Vamos agora olhar para "Outlook = Rain":
 
 Agora vamos para a variável Humidity.
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 golf %>% group_by(Humidity, Play) %>% summarise(N=n())
 ```
 
@@ -790,24 +790,77 @@ Temos que "Humidity = High" separa os dados da seguinte forma:
 
 Por último, a variável Wind:
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 golf %>% group_by(Wind, Play) %>% summarise(N=n())
 ```
 
 ![](images/AB_Wind.png){fig-align="center"}
 
-
 **Gini(Wind = Strong)** $= \frac{6}{14} \times \left[1 - (\frac{3}{6})^2 - (\frac{3}{6})^2 \right] + \frac{8}{14} \times \left[ 1 - (\frac{6}{8})^2 - (\frac{2}{8})^2 \right] = 0,429$
-
 
 Logo, os índices Gini calculados foram:
 
-Variáveis | Índice Gini
-Outlook = Overcast |	0,357
-Outlook = Rain |	0,457
-Outlook = Sunny |	0,394
-Humidity = High |	0,367
-Wind = Strong |	0,429
+| Variáveis          | Índice Gini |
+|--------------------|-------------|
+| Outlook = Overcast | 0,357       |
+| Outlook = Rain     | 0,457       |
+| Outlook = Sunny    | 0,394       |
+| Humidity = High    | 0,367       |
+| Wind = Strong      | 0,429       |
+
+Selecionamos a variável com o menor índice Gini para ser o primeiro toco da floresta. Nesse caso, o menor índice Gini é o da variável "Outlook = Overcast".
+
+![](images/AB_toco.png){fig-align="center"}
+
+Agora precisamos calcular o peso desse toco na classificação final. Para isso, vamos calcular seu erro total.
+
+O erro total de um toco é calculado pelo número de amostras classificadas erradas dividido pelo total de amostras.
+
+![](images/AB_toco2.png){fig-align="center"}
+
+Para esse toco houve 5 amostras classificadas erradas em um total de 14. Logo,
+
+::: {style="text-align: center;"}
+**Erro Total** $= \frac{5}{14}$
+:::
+
+Dessa forma podemos calcular o *Amount of Say* do toco, que será seu peso na classificação final.
+
+**Amount of Say** $= \frac{1}{2} \times log \left( \frac{1-\frac{5}{14}}{\frac{5}{14}} \right) = 0,29$
+
+Então 0,29 é o seu peso na classificação final.
+
+Agora vamos construir o próximo toco. Para isso damos um peso maior para as amostras que foram classificadas erroneamente no toco anterior. Essas amostras foram as seguintes:
+
+```{r}
+golf %>% filter(Outlook != "Overcast" & Play != "No")
+```
+
+Então, para rebalancearmos os pesos das amostras classificadas de forma certa e errada, utilizamos as seguintes fórmulas:
+
+**Peso Amostras Erradas** $=$ **Erro Total** $\times$ $e^{Amount of Say}$
+
+**Peso Amostras Corretas** $=$ **Erro Total** $\times$ $e^{-Amount of Say}$
+
+Assim, para o segundo toco, os pesos serão:
+
+**Peso Amostras Erradas** $= \frac{5}{14} \times e^{0,29} = 0,477$
+
+**Peso Amostras Erradas** $= \frac{5}{14} \times e^{-0,29} = 0,267$
+
+Então temos os pesos para as amostras:
+
+![](images/tabela_adaboost.png){fig-align="center"}
+
+A soma dos pesos das amostras deve ser 1, mas isso não ocorre: note que a soma resulta em 4,788. Dessa forma, precisamos reescalar os pesos. Faremos isso dividindo cada um deles por 4,788.
+
+Feito isso, temos uma nova tabela de pesos:
+
+![](images/tabela_adaboost2.png){fig-align="center"}
+
+
+
+
 
 
 
